--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
     // Room for simple persistence with an ORM
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.facebook.stetho:stetho:1.5.1'
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.5'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 
     implementation 'org.parceler:parceler-api:1.1.12'
